framec_tests/language_specific/python/v3_mir/positive/forward_inline_semicolon.frm
@target python

system S {
    machine:
        $A {
            e() {
                => $^; x = 1  # ok
            }
        }
}

