framec_tests/language_specific/python/v3_mir/negative/transition_inline_semicolon_native.frm
@target python

system S {
    machine:
        $A {
            e() {
                -> $B(); x = 1
            }
        }
}

